@@ -1,13 +1,0 @@
-version: '2'
-user-data:
-  author: Anthon van der Neut <a.van.der.neut@ruamel.eu>
-  description: manylinux wheel build container for ruamel.yaml
-  env-defaults:
-    PYDISTBASE: /tmp    # for building, normally set by `dv --distbase`
-services:
- ruamel_yaml_manylinux1:
-    container_name: ruamel_yaml
-    build: .
-    volumes:
-    - ${PYDISTBASE}/ruamel.yaml:/src/dist
-    - .:/src
