@@ -1,3 +1,8 @@
+[0, 16, 2]: 2019-08-15
+  - preserve YAML and TAG directives on roundtrip, correctly output #
+    in URL for YAML 1.2 (both reported by `Thomas Smith
+    <https://bitbucket.org/%7Bd4c57a72-f041-4843-8217-b4d48b6ece2f%7D/>`__)
+
 [0, 16, 1]: 2019-08-08
   - Force the use of new version of ruamel.yaml.clib (reported by `Alex Joz
     <https://bitbucket.org/%7B9af55900-2534-4212-976c-61339b6ffe14%7D/>`__)
